--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,43 @@ nav{
     font-size: 18px;
     margin-right: 60px;
 }
+.stats{
+    display: flex;
+    margin-top: 130px;
+}
+.stats-line{
+    display: flex;
+}
+.stats-tetx{
+    padding: 40px;
+}
+.stats-tetx h2{
+    font-size: 40px;
+    margin-bottom: 70px;
+}
+.stats-tetx p{
+    margin-top: 50px;
+    font-size: 13px;
+    line-height: 27;
+}
+.square{
+    width: 200px;
+    height: 200px;
+    background-color: #f6f5f4;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.stats-square{
+    font-size: 40px;
+    color: #ffcc01;
+    margin-bottom: 15px;
+}
+.square-text{
+    font-size: 14px;
+}
 
 @media screen and (max-width: 765px){
     .toggle{
