--- a/styles.css
+++ b/styles.css
@@ -200,4 +200,23 @@ nav{
         font-size: 13px;
         margin-right: 0;
     }
+    .stats{
+        margin-top: 0;
+        flex-direction: column;
+    }
+    .stats-text{
+        padding: 10px;
+    }
+    .stats-text h2{
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+    .stats-text p{
+        margin-top: 5px;
+        font-size: 13px;
+        line-height: 18;
+    }
+    .square{
+        height: 140px;
+    }
 }
