--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
     margin: 0;
     font-family: 'Roboto Condensed';
 }
-body, html{
-    overflow: hidden;
+body{
+    overflow: scroll;
 }
 nav{
     margin:auto;
@@ -101,7 +101,7 @@ nav{
 .stats-text p{
     margin-top: 50px;
     font-size: 13px;
-    line-height: 27;
+    line-height: 27px;
 }
 .square{
     width: 200px;
@@ -214,7 +214,7 @@ nav{
     .stats-text p{
         margin-top: 5px;
         font-size: 13px;
-        line-height: 18;
+        line-height: 18px;
     }
     .square{
         height: 140px;
